k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: woolball-ingress
  namespace: woolball
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$remote_addr"
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - woolball.xyz
        - open.woolball.xyz
        - api.woolball.xyz
        - ws.woolball.xyz
      secretName: woolball-tls
  rules:
    - host: woolball.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 80
    - host: open.woolball.xyz
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: core-api
                port:
                  number: 8080
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: core-api
                port:
                  number: 8080
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: core-websocket
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
    - host: api.woolball.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-api
                port:
                  number: 8080
    - host: ws.woolball.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-websocket
                port:
                  number: 8080
